fix: apply word break in config panel

--- a/src/panels/ConfigPanel/_config-panel.scss
+++ b/src/panels/ConfigPanel/_config-panel.scss
@@ -8,9 +8,10 @@
     background-color: inherit;
     border: none;
     padding: 0;
+
     // extra styles
     white-space: pre-wrap;
-    word-break: keep-all;
+    word-break: break-word;
   }
 
   .config-panel__hide-button {
